# android-cuttlefish

./: .clang-format  .gitignore  .gitmodules  Android.bp  Android.mk  AndroidProducts.mk  BUILD  BUILDING.md  CleanSpec.mk  Dockerfile  Dockerfile.builder  GPU.md  LICENSE  OWNERS  OWNERS_techleads  PREUPLOAD.cfg  README.md  TEST_MAPPING  WORKSPACE  build-android-with-docker.sh  build-webui.sh  build.sh  build_debs.sh  build_webui.sh  cf  client.go  client_test.go  coderabbit  cvd  debian_substitution_marker  default-permissions.xml  download-aosp.sh  equivs.sh  expose-port.sh  fetcher.mk  host_orchestrator_client.go  host_orchestrator_client_test.go  host_package.mk  httputils.go  httputils_test.go  (+16 more)
allocd-port/srcs/: CMakeLists.txt
allocd-port/srcs/fs/: CMakeLists.txt  epoll.cpp  shared_buf.cpp  shared_fd.cpp  shared_fd_stream.cpp
allocd-port/srcs/test/: CMakeLists.txt  result_test.cc
base/cvd/: .bazelrc  .clang-tidy  .gitignore  .shellcheckrc  BUILD.android_system_core.bazel  BUILD.android_system_extras.bazel  BUILD.android_tools_netsim.bazel  BUILD.arm_optimized_routines.bazel  BUILD.avb.bazel  BUILD.bazel  BUILD.casimir.bazel  BUILD.crosvm.bazel  BUILD.dosfstools.bazel  BUILD.drm.bazel  BUILD.e2fsprogs.bazel  BUILD.egl_headers.bazel  BUILD.expat.bazel  BUILD.f2fs_tools.bazel  BUILD.fec_rs.bazel  BUILD.fruit.bazel  BUILD.jasonjason.bazel  BUILD.libcap.bazel  BUILD.libcbor.bazel  BUILD.libcn_cbor.bazel  BUILD.libconfig.bazel  BUILD.libdrm.bazel  BUILD.libeigen.bazel  BUILD.libffi.bazel  BUILD.libnl.bazel  BUILD.libopenscreen.bazel  BUILD.libpffft.bazel  BUILD.librnnoise.bazel  BUILD.libsrtp2.bazel  BUILD.libunwind.bazel  BUILD.libusb.bazel  BUILD.libvpx.bazel  BUILD.libwebm.bazel  BUILD.libwebrtc.bazel  BUILD.libwebsockets.bazel  BUILD.libyuv.bazel  (+28 more)
base/cvd/.agents/: AGENTS.md
base/cvd/adb/: BUILD.bazel  adb.cpp  adb.h  adb_auth.h  adb_listeners.cpp  adb_listeners.h  adb_mdns.cpp  adb_mdns.h  adb_trace.cpp  adb_trace.h  adb_utils.cpp  adb_utils.h  adb_wifi.h  apacket_reader.cpp  apacket_reader.h  file_sync_protocol.h  services.cpp  services.h  socket.h  socket_spec.cpp  socket_spec.h  sockets.cpp  sysdeps.h  sysdeps_unix.cpp  transport.cpp  transport.h  transport_fd.cpp  types.h
base/cvd/allocd/: .clang-tidy  BUILD.bazel  alloc_driver.h  alloc_iproute2.cpp  alloc_netlink.cpp  alloc_utils.cpp  alloc_utils.h  alloc_utils_firewall_test.cpp  allocd.cpp  request.h  resource.cpp  resource_manager.cpp  resource_manager.h  test_client.cpp  utils.cpp  (+1 more)
cvd/: cvd_server.proto  internal_config.proto  logging_splitters.h  meson.build
cvd/allocd/: allocd.cpp  resource_manager.cpp  resource_manager.h  test_client.cpp
cvd/android-base/: endian.h  errors.h  expected.h  file.cpp  file.h  logging.cpp  logging.h  posix_strerror_r.cpp  result.h  strings.cpp  strings.h  threads.cpp  threads.h  unique_fd.h
cvd/debian/: control  copyright  cuttlefish-cvd.install
docker/: .gitignore  BUILD  BUILD.bazel  BUILDING.md  Dockerfile  GPU.md  MODULE.bazel  README.md  build-android-with-docker.sh  build.sh  cf  debs_tar_builder.sh  download-aosp.sh  equivs.sh  image-build-bazel-wrapper.sh  image-builder.sh  install-deps.sh  orchestration-image-builder.sh  parse-deps.sh  setup.sh  shflags  write-equivs.sh
docker/android-builder-docker/: common_intrinsic.sh
docker/arm-server/: BUILD  Dockerfile  build.sh  run.sh  run_services.sh
docker/debs-builder-docker/: BUILD  BUILD.bazel  Dockerfile.debbld  build-debs-with-docker.sh  build-hostpkg.sh  debs-tar-builder.sh  main.sh  shflags
docker/guest/: hostpkg-builder.sh  run_services.sh
docker/orchestration/: Dockerfile  build.sh  run.sh
docker/rhel-integration/: Dockerfile  preinstall.sh
docker/rhel-orchestration/: Dockerfile  preinstall.sh  services.sh
docker/rpm-builder/: Dockerfile  README.md  build_rpm_spec.sh  buildscript.sh  preinstall.sh  testscript.sh
docker/rpm-builder-integration/: Dockerfile  preinstall.sh  preinstall_arm_64.sh  preinstall_x86_64.sh
docker/rpm-builder-orchestration/: Dockerfile  preinstall_arm_64.sh  preinstall_x86_64.sh
e2etests/: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  boot_tests.bzl  cvd_boot_test.bzl  cvd_boot_test.sh  cvd_load_boot_test.sh  debian_substitution_marker  deps.bzl  go.mod  go.sum  go_repositories.bzl  launch_cvd_boot_test.sh
e2etests/cvd/: BUILD.bazel  boot_tests.bzl  convert_xts_xml_to_junit_xml.py  convert_xts_xml_to_junit_xml_test.py  cvd_command_boot_test.sh  cvd_common.go  cvd_gpu_tests.go  cvd_load_boot_test.sh  cvd_tests.go  cvd_xts_test.sh  cvd_xts_test_runner.go  launch_cvd_boot_test.sh  metrics_test.sh  xts_test.bzl
e2etests/orchestration/: BUILD  BUILD.bazel  bar.sh  baztool.sh  common.go  create-single-instance-test.sh  create_single_instance_test.sh  createfromimageszip_test.go  createlocalimage_test.go  createsingleinstance_test.go  fetch_aosp_artifact.sh  foo.sh  orchestration.bzl  snapshot_test.go
e2etests/tools/: bazel
frontend/: .gitignore  BUILD.bazel  MODULE.bazel  build-webui.sh  gen_ssl_cert.sh  go.work  go.work.sum  install-nodejs.sh  install-protoc.sh  setup-nodejs-env.sh
frontend/debian/: changelog  control  copyright  cuttlefish-orchestration.cuttlefish-cvdserver-bootstrapper.default  cuttlefish-orchestration.cuttlefish-cvdserver-bootstrapper.init  cuttlefish-orchestration.cuttlefish-cvdserver_bootstrapper.init  cuttlefish-orchestration.cuttlefish-host-orchestrator.init  cuttlefish-orchestration.cuttlefish-host_orchestrator.default  cuttlefish-orchestration.cuttlefish-host_orchestrator.init  cuttlefish-orchestration.cuttlefish-host_orchestrator.service  cuttlefish-orchestration.install  cuttlefish-orchestration.links  cuttlefish-orchestration.lintian-overrides  cuttlefish-orchestration.postinst  cuttlefish-podcvd.cuttlefish-podcvd.init  cuttlefish-podcvd.links  cuttlefish-user.cuttlefish-operator.default  cuttlefish-user.cuttlefish-operator.init  cuttlefish-user.cuttlefish-operator.service  cuttlefish-user.install  cuttlefish-user.links  cuttlefish-user.lintian-overrides  cuttlefish-user.postinst  rules
frontend/src/: goutil  protocutil
(+9344 files in other folders)
