project('cvd', 'cpp', default_options: ['cpp_std=gnu++17'])

sources = [
  'android-base/file.cpp',
  'android-base/parsebool.cpp',
  'android-base/posix_strerror_r.cpp',
  'android-base/stringprintf.cpp',
  'android-base/strings.cpp',
  'android-base/threads.cpp',
  'android-base/logging.cpp',
  'cuttlefish/common/libs/fs/shared_buf.cc',
  'cuttlefish/common/libs/fs/shared_fd.cpp',
  'cuttlefish/common/libs/fs/shared_fd_stream.cpp',
  'cuttlefish/common/libs/fs/epoll.cpp',
  'cuttlefish/common/libs/utils/archive.cpp',
  'cuttlefish/common/libs/utils/base64.cpp',
  'cuttlefish/common/libs/utils/environment.cpp',
  'cuttlefish/common/libs/utils/files.cpp',
  'cuttlefish/common/libs/utils/flag_parser.cpp',
  'cuttlefish/common/libs/utils/flags_validator.cpp',
  'cuttlefish/common/libs/utils/json.cpp',
  'cuttlefish/common/libs/utils/network.cpp',
  'cuttlefish/common/libs/utils/proc_file_utils.cpp',
  'cuttlefish/common/libs/utils/shared_fd_flag.cpp',
  'cuttlefish/common/libs/utils/socket2socket_proxy.cpp',
  'cuttlefish/common/libs/utils/tcp_socket.cpp',
  'cuttlefish/common/libs/utils/tee_logging.cpp',
  'cuttlefish/common/libs/utils/unix_sockets.cpp',
  'cuttlefish/common/libs/utils/users.cpp',
  'cuttlefish/common/libs/utils/vsock_connection.cpp',
  'cuttlefish/common/libs/utils/inotify.cpp',
  'cuttlefish/common/libs/utils/subprocess.cpp',
  'cuttlefish/host/commands/cvd/acloud/config.cpp',
  'cuttlefish/host/commands/cvd/acloud/converter.cpp',
  'cuttlefish/host/commands/cvd/acloud/create_converter_parser.cpp',
  'cuttlefish/host/commands/cvd/build_api.cpp',
  'cuttlefish/host/commands/cvd/client.cpp',
  'cuttlefish/host/commands/cvd/command_sequence.cpp',
  'cuttlefish/host/commands/cvd/common_utils.cpp',
  'cuttlefish/host/commands/cvd/demo_multi_vd.cpp',
  'cuttlefish/host/commands/cvd/driver_flags.cpp',
  'cuttlefish/host/commands/cvd/epoll_loop.cpp',
  'cuttlefish/host/commands/cvd/fetch/fetch_cvd.cc',
  'cuttlefish/host/commands/cvd/frontline_parser.cpp',
  'cuttlefish/host/commands/cvd/handle_reset.cpp',
  'cuttlefish/host/commands/cvd/instance_lock.cpp',
  'cuttlefish/host/commands/cvd/instance_manager.cpp',
  'cuttlefish/host/commands/cvd/lock_file.cpp',
  'cuttlefish/host/commands/cvd/logger.cpp',
  'cuttlefish/host/commands/cvd/parser/cf_configs_common.cpp',
  'cuttlefish/host/commands/cvd/parser/cf_configs_instances.cpp',
  'cuttlefish/host/commands/cvd/parser/cf_flags_validator.cpp',
  'cuttlefish/host/commands/cvd/parser/cf_metrics_configs.cpp',
  'cuttlefish/host/commands/cvd/parser/fetch_cvd_parser.cpp',
  'cuttlefish/host/commands/cvd/parser/instance/cf_boot_configs.cpp',
  'cuttlefish/host/commands/cvd/parser/instance/cf_disk_configs.cpp',
  'cuttlefish/host/commands/cvd/parser/instance/cf_graphics_configs.cpp',
  'cuttlefish/host/commands/cvd/parser/instance/cf_security_configs.cpp',
  'cuttlefish/host/commands/cvd/parser/instance/cf_vm_configs.cpp',
  'cuttlefish/host/commands/cvd/parser/launch_cvd_parser.cpp',
  'cuttlefish/host/commands/cvd/parser/launch_cvd_templates.cpp',
  'cuttlefish/host/commands/cvd/parser/load_configs_parser.cpp',
  'cuttlefish/host/commands/cvd/parser/selector_parser.cpp',
  'cuttlefish/host/commands/cvd/reset_client_utils.cpp',
  'cuttlefish/host/commands/cvd/run_server.cpp',
  'cuttlefish/host/commands/cvd/selector/arguments_lexer.cpp',
  'cuttlefish/host/commands/cvd/selector/arguments_separator.cpp',
  'cuttlefish/host/commands/cvd/selector/creation_analyzer.cpp',
  'cuttlefish/host/commands/cvd/selector/device_selector_utils.cpp',
  'cuttlefish/host/commands/cvd/selector/group_selector.cpp',
  'cuttlefish/host/commands/cvd/selector/instance_database.cpp',
  'cuttlefish/host/commands/cvd/selector/instance_database_impl.cpp',
  'cuttlefish/host/commands/cvd/selector/instance_database_types.cpp',
  'cuttlefish/host/commands/cvd/selector/instance_database_utils.cpp',
  'cuttlefish/host/commands/cvd/selector/instance_group_record.cpp',
  'cuttlefish/host/commands/cvd/selector/instance_record.cpp',
  'cuttlefish/host/commands/cvd/selector/instance_selector.cpp',
  'cuttlefish/host/commands/cvd/selector/selector_common_parser.cpp',
  'cuttlefish/host/commands/cvd/selector/selector_constants.cpp',
  'cuttlefish/host/commands/cvd/selector/selector_option_parser_utils.cpp',
  'cuttlefish/host/commands/cvd/selector/start_selector_parser.cpp',
  'cuttlefish/host/commands/cvd/server.cc',
  'cuttlefish/host/commands/cvd/server_client.cpp',
  'cuttlefish/host/commands/cvd/server_command/acloud.cpp',
  'cuttlefish/host/commands/cvd/server_command/acloud_command.cpp',
  'cuttlefish/host/commands/cvd/server_command/acloud_common.cpp',
  'cuttlefish/host/commands/cvd/server_command/acloud_mixsuperimage.cpp',
  'cuttlefish/host/commands/cvd/server_command/acloud_translator.cpp',
  'cuttlefish/host/commands/cvd/server_command/cmd_list.cpp',
  'cuttlefish/host/commands/cvd/server_command/components.cpp',
  'cuttlefish/host/commands/cvd/server_command/display.cpp',
  'cuttlefish/host/commands/cvd/server_command/env.cpp',
  'cuttlefish/host/commands/cvd/server_command/fetch.cpp',
  'cuttlefish/host/commands/cvd/server_command/flags_collector.cpp',
  'cuttlefish/host/commands/cvd/server_command/fleet.cpp',
  'cuttlefish/host/commands/cvd/server_command/generic.cpp',
  'cuttlefish/host/commands/cvd/server_command/handler_proxy.cpp',
  'cuttlefish/host/commands/cvd/server_command/help.cpp',
  'cuttlefish/host/commands/cvd/server_command/host_tool_target.cpp',
  'cuttlefish/host/commands/cvd/server_command/host_tool_target_manager.cpp',
  'cuttlefish/host/commands/cvd/server_command/load_configs.cpp',
  'cuttlefish/host/commands/cvd/server_command/power.cpp',
  'cuttlefish/host/commands/cvd/server_command/reset.cpp',
  'cuttlefish/host/commands/cvd/server_command/restart.cpp',
  'cuttlefish/host/commands/cvd/server_command/serial_launch.cpp',
  'cuttlefish/host/commands/cvd/server_command/serial_preset.cpp',
  'cuttlefish/host/commands/cvd/server_command/shutdown.cpp',
  'cuttlefish/host/commands/cvd/server_command/snapshot.cpp',
  'cuttlefish/host/commands/cvd/server_command/start.cpp',
  'cuttlefish/host/commands/cvd/server_command/start_impl.cpp',
  'cuttlefish/host/commands/cvd/server_command/subprocess_waiter.cpp',
  'cuttlefish/host/commands/cvd/server_command/try_acloud.cpp',
  'cuttlefish/host/commands/cvd/server_command/utils.cpp',
  'cuttlefish/host/commands/cvd/server_command/version.cpp',
  'cuttlefish/host/commands/cvd/server_constants.cpp',
  'cuttlefish/host/commands/cvd/types.cpp',
  'cuttlefish/host/commands/cvd/flag.cpp',
  'cuttlefish/host/libs/allocd/alloc_utils.cpp',
  'cuttlefish/host/libs/allocd/resource.cpp',
  'cuttlefish/host/libs/allocd/resource_manager.cpp',
  'cuttlefish/host/libs/allocd/utils.cpp',
  'cuttlefish/host/libs/config/cuttlefish_config.cpp',
  'cuttlefish/host/libs/config/fetcher_config.cpp',
  'cuttlefish/host/libs/config/instance_nums.cpp',
  'cuttlefish/host/libs/config/cuttlefish_config_environment.cpp',
  'cuttlefish/host/libs/config/cuttlefish_config_instance.cpp',
  'cuttlefish/host/libs/config/host_tools_version.cpp',
  'cuttlefish/host/libs/web/build_api.cc',
  'cuttlefish/host/libs/web/credential_source.cc',
  'cuttlefish/host/libs/web/http_client/http_client.cc',
  'cuttlefish/host/libs/web/http_client/http_client_util.cc',
  'cuttlefish/host/libs/web/http_client/sso_client.cc',
]

fruit_include = include_directories('/usr/local/include/')
cc = meson.get_compiler('cpp')
fruit_lib = cc.find_library('fruit', dirs: ['/usr/local/lib'])
boringssl_crypto_lib = cc.find_library('crypto', dirs: ['/usr/lib/x86_64-linux-gnu/android'])
boringssl_ssl_lib = cc.find_library('ssl', dirs: ['/usr/lib/x86_64-linux-gnu/android'])

protoc = find_program('protoc', required : true)
deps = dependency('protobuf', required : true)
protoc_generator = generator(protoc,
  output    : ['@BASENAME@.pb.cc', '@BASENAME@.pb.h'],
  arguments : ['--proto_path=@CURRENT_SOURCE_DIR@', '--cpp_out=@BUILD_DIR@', '@INPUT@'])

server = protoc_generator.process('cvd_server.proto')
internal_config = protoc_generator.process('internal_config.proto')
launch_cvd_proto = protoc_generator.process('launch_cvd.proto')
user_config = protoc_generator.process('user_config.proto')

git_version_h = vcs_tag(
  command : ['git', 'describe'],
  fallback : 'unknown',
  input : 'build_version.h.in',
  output :'version.h',
)

executable(
  'cvd',
  cpp_args: ['-Wno-reorder', '-Wno-unknown-pragmas', '-Wno-attributes', '-Wno-sign-compare', '-Wno-write-strings'],
  sources: ['cuttlefish/host/commands/cvd/main.cc'] + sources + server + launch_cvd_proto + internal_config + user_config + git_version_h,
  dependencies: [
    boringssl_crypto_lib,
    boringssl_ssl_lib,
    dependency('fmt'),
    dependency('gflags'),
    dependency('jsoncpp'),
    dependency('libcurl'),
    dependency('libglog'),
    dependency('libxml-2.0'),
    dependency('protobuf'),
    fruit_lib,
  ],
  include_directories: [
    '/usr/include/android/',
    '/usr/local/include',
    'cuttlefish',
  ],
)
executable(
  'allocd',
  cpp_args: ['-Wno-reorder', '-Wno-unknown-pragmas', '-Wno-attributes', '-Wno-sign-compare', '-Wno-write-strings'],
  sources: ['cuttlefish/host/libs/allocd/allocd.cpp'] + sources + server + launch_cvd_proto + internal_config + user_config + git_version_h,
  dependencies: [
    boringssl_crypto_lib,
    boringssl_ssl_lib,
    dependency('fmt'),
    dependency('gflags'),
    dependency('jsoncpp'),
    dependency('libcurl'),
    dependency('libglog'),
    dependency('libxml-2.0'),
    dependency('protobuf'),
    fruit_lib,
  ],
  include_directories: [
    '/usr/include/android/',
    '/usr/local/include',
    'cuttlefish',
  ],
)
