bazel_dep(name = "gazelle", version = "0.31.0")
bazel_dep(name = "rules_go", version = "0.39.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_docker_docker",
    "com_github_docker_go_connections",
    "com_github_google_go_cmp",
)

bazel_dep(name = "host_orchestrator")
local_path_override(
    module_name = "host_orchestrator",
    path = "../frontend/src/host_orchestrator",
)

bazel_dep(name = "libhoclient")
local_path_override(
    module_name = "libhoclient",
    path = "../frontend/src/libhoclient",
)

bazel_dep(name = "liboperator")
local_path_override(
    module_name = "liboperator",
    path = "../frontend/src/liboperator",
)

bazel_dep(name = "images")
local_path_override(
    module_name = "images",
    path = "..",
)
