module(name = "com_github_google_android_cuttlefish_frontend")

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.7")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# Note: The following com_github_google_android_cuttlefish_frontend_src_* repos
# are listed here because Gazelle's go_deps extension reports them as direct
# dependencies based on go.mod files. However, they are NOT pulled from external
# locations. Gazelle resolves Go imports to local targets in this workspace
# (e.g., //src/host_orchestrator/...). They are included here to satisfy
# 'bazel mod tidy' and avoid warnings.
use_repo(
    go_deps,
    "com_github_cenkalti_backoff_v4",
    "com_github_google_android_cuttlefish_frontend_src_host_orchestrator",
    "com_github_google_android_cuttlefish_frontend_src_liboperator",
    "com_github_google_btree",
    "com_github_google_go_cmp",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_gorilla_websocket",
    "com_github_pion_logging",
    "com_github_pion_webrtc_v3",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
