load("@netsim_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "libnetsim_proto",
    srcs = glob(["rust/proto/src/**/*.rs"]),
    crate_name = "netsim_proto",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        package_name = "proto",
        normal = True,
    ),
)

rust_library(
    name = "libnetsim_common",
    srcs = glob(["rust/common/src/**/*.rs"]),
    crate_name = "netsim_common",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        package_name = "common",
        normal = True,
    ),
)

rust_library(
    name = "libnetsim_cli",
    srcs = glob(["rust/cli/src/*.rs"]),
    crate_name = "netsim_cli",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        package_name = "cli",
        normal = True,
    ) + [
        ":libnetsim_common",
        ":libnetsim_proto",
    ],
)

rust_binary(
    name = "netsim",
    srcs = ["rust/cli/bin/netsim.rs"],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        package_name = "cli",
        normal = True,
    ) + [
        ":libnetsim_cli",
    ],
)
